Date	Added
12/17
	* db.c: Fixed probs with OnInit, OnTime, and etc NPC probs
	  Just reverted it back. [Lupus]
	* Fixed warning message in db.c line 445 [MC Cameri]
	* Added #effect, removed @chareffect [MC Cameri]
        * Reverted a change in map.c causing problems, sorry >.< [celest]
        * Updated Sphere Mine - it'll now move in the opposite direction if
          being hit by its master [celest]
        * Updated Wind Walk [celest]
	* Fixed skill #301 causing crashes [MouseJstr]
	* Fixed documentation error on gm_skills_unconditionl [MouseJstr]
	* added @grind test command.. only for testing [MouseJstr]
	* Added clearweather to the atcommand configuration file. [nsstrunks]

12/16
        * Added a fix for AFM loading, thanks to Pete [celest]
        * Updated maximum levels for supernovice to 99 [celest]
        * Updated supernovice jobexp table - should be same from 50 onwards [celest]
        * Corrected maximum job level checking in @joblvup and @charjob [celest]
        * Added the new spell scrolls, thanks to Landarma [celest]
        * Corrected a few skills, thanks to orn [celest]
        * Corrected Extremity Fist to not require Explosion Spirits when being used
          right after using Combo Finish or Dilemma [celest]
        * Added instant cast weapon skills rely on attack speed as cast delays, not
          on dex [celest]
        * Fixed mob_ghostring_fix not working [celest]
        * Changed default value for mob_ghostring_fix to 'yes' [celest]
	* Added #itemlist, removed @charitemlist [MC Cameri]
	* Changed @job and #job so that when it's used it unequips all the items, to prevent sprite errors [MC Cameri]
	* Fixed a misuse of mysql_config (thanks Daegalus for
	  creating a reproducable environment for me)   [MouseJstr]
	* Fixed compile time errors for gcc 2.95 [MouseJstr]
        * Updated Forging and Potion making formulas by DracoRPG [celest]
        * Changes to the guild skills